Adicionado outro arquivo mp4 de tamanho menor para ver se consegue subir

--- a/exercicios/ex012/index.html
+++ b/exercicios/ex012/index.html
@@ -12,8 +12,8 @@
   <!-- <video src="midia/12919604_3840_2160_60fps.mp4" width="600px;" autoplay muted loop></video> -->  <!--Maneira simples de adicionar video no código-->
 
     <video autoplay muted loop controls width="700px;" poster="imagens/capa.jpeg">
-        <source src="midia/12919604_3840_2160_60fps.mp4" type="video/mp4">
-        <source src="midia/12919604_3840_2160_60fps.webm" type="video/webm">
+        <source src="midia/meu-video.mp4" type="video/mp4">
+        <source src="midia/meu-video.mp4" type="video/webm">
         <p>seu navegador não tem compatibilidade para vídeo</p>
 
     </video>
