--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -8,7 +8,7 @@
     <style>
 
         body { 
-           background-image: url(wallpaper001.jpg);
+           background-image: url(imagens/wallpaper001.jpg);
         }
         div.quadrado {
         display: inline-block;
@@ -29,7 +29,7 @@
         }
 
         div#q3 { 
-        background-image: url(pattern003.png);
+        background-image: url(imagens/pattern003.png);
 
         }
 
