--- a/exercicios/ex022/fundo003.html
+++ b/exercicios/ex022/fundo003.html
@@ -8,7 +8,7 @@
     <style>
 
         div.bloco {
-            background-image: url(wallpaper003.jpg);
+            background-image: url(imagens/wallpaper003.jpg);
             height: 200px;
             margin: 5px;
             border: 1px solid black;
