Desafio do Astronauta + Inicio Desafio Cordel

--- a/Desafios/desafio 10 modulo 2/index.html
+++ b/Desafios/desafio 10 modulo 2/index.html
@@ -19,7 +19,9 @@
             height: 100%;
         }
 
-    header { 
+    header {
+        position:fixed;
+        width: 100%;
         font-family: Arial, Helvetica, sans-serif;
         background-image:linear-gradient(to bottom, #46f193, #1a5f38);
         min-height: 230px;
@@ -66,6 +68,7 @@
         border-radius: 0px 0px 10px 10px;
         margin-bottom: 15px;
         box-shadow: 0px 1px 8px 3px rgba(0, 0, 0, 0.37);
+        padding-top: 50px;
         padding-bottom: 20px;
     }
 
@@ -169,6 +172,8 @@
         <a href="#">Fale Conosco</a>
     </nav>
     </header>
+
+    <div style="min-height: 240px;"></div>
     <main>
         <section>
             <article class="android">
