--- a/exercicios/ex0027/flex004/index.html
+++ b/exercicios/ex0027/flex004/index.html
@@ -8,13 +8,18 @@
         div.container {
             background-color: lightblue;
             display: flex;
+            flex-flow: row nowrap;
+            justify-content: space-evenly;
+            height: 300px;
+            align-items: center;
+            
              
         }
         div.item { 
             background-color: lightcoral;
             border: 1px solid black;
-            flex:auto;
             text-align: center;
+            padding: 20px;
         }
 
 
