--- a/exercicios/ex027/flex013 - menu flexbox/index.html
+++ b/exercicios/ex027/flex013 - menu flexbox/index.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css" media="screen and (max-width:520px)">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
     <title>MenuFlexbox</title>
+
+    <script>
+        function displayMenu() { 
+            if (navitens.style.display == 'flex') { 
+                navitens.style.display = 'none'
+            } else { 
+                navitens.style.display = 'flex'
+            }
+        }
+
+        function menuResize () {
+            if (window.innerWidth >= 521) { 
+                navitens.style.display = 'flex'
+            } else { 
+                navitens.style.display = 'none'
+            }
+        }
+    </script>
+
 </head>
-<body>
+<body onresize="menuResize()">
     <header>
         <h1>Meu Site</h1>
-        <nav>
+        <span id="menuicon" class="material-symbols-outlined" onclick="displayMenu()">menu</span>
+        <nav id="navitens">
             <a href="">Opção 1</a>
             <a href="">Opção 2</a>
             <a href="">Opção 3</a>
